# Heimdall

./: .gitignore  HeimdallDesign.md  LICENSE  NOTICE  SECURITY_ANALYSIS.md  deploy.sh
.claude/: settings.json
agents/windows/: .gitignore  pyproject.toml
agents/windows/agent/: __init__.py  blocker.py  communication.py  config.py  demo.py  main.py  monitor.py  offline_cache.py  overlay.py  register.py  remote_control.py  tray_ui.py
agents/windows/tests/: conftest.py  test_blocker.py  test_communication.py  test_config.py  test_monitor.py  test_offline_cache.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_streak_threshold.py  003_usage_reward_rules.py  004_quest_category_fields.py  005_family_invitations.py  006_tan_schedules.py  007_add_totp_to_users.py  008_composite_indexes.py
backend/app/: .env.example  config.py  database.py  main.py  types.py
backend/app/core/: dependencies.py  rate_limit.py  redis_client.py  security.py
backend/app/models/: __init__.py  app_group.py  day_type.py  device.py  family.py  invitation.py  quest.py  tan.py  tan_schedule.py  time_rule.py  usage.py  usage_reward.py  user.py
backend/app/routers/: agent.py  analytics.py  app_groups.py  auth.py  children.py  day_types.py  devices.py  families.py  llm.py  portal_ws.py  quests.py  tan_schedules.py  tans.py  time_rules.py  totp.py  uploads.py  usage_rewards.py
backend/app/schemas/: agent.py  analytics.py  app_group.py  auth.py  day_type.py  device.py  family.py  invitation.py  llm.py  quest.py  tan.py  tan_schedule.py  time_rule.py  totp.py  usage_reward.py  user.py
backend/app/services/: analytics_service.py  connection_manager.py  holiday_service.py  invitation_service.py  llm_service.py  quest_scheduler.py  quest_service.py  rule_engine.py  rule_push_service.py  tan_scheduler.py  tan_service.py  totp_service.py  usage_reward_service.py
backend/tests/: conftest.py  test_api_app_groups.py  test_api_auth.py  test_api_children.py  test_api_device_actions.py  test_api_families.py  test_api_health.py  test_api_quests.py  test_api_tamper_alert.py  test_api_tans.py  test_api_time_rules.py  test_api_totp.py  test_unit_auto_detect.py  test_unit_connection_manager.py  test_unit_device_coupling.py  test_unit_llm_service.py  test_unit_parent_ws.py  test_unit_quest_scheduler.py  test_unit_security.py  test_unit_streak_bonus.py  test_unit_tan_service.py  test_unit_totp_service.py
mobile/: .gitignore  (+2 more)
(+104 files in other folders)
