[project]
name = "heimdall-backend"
version = "0.1.0"
description = "Heimdall — Parental Control System (Backend API)"
readme = "README.md"
license = "Elastic-2.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "anthropic>=0.42.0",
    "asyncpg>=0.31.0",
    "bcrypt<5",
    "email-validator>=2.3.0",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
