[project]
name = "heimdall-agent"
version = "0.1.0"
description = "Heimdall Windows Device Agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=13.0",
    "psutil>=6.0.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
heimdall-agent = "agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
